--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: Blogistic Regression
 email: wcbeard10+10@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Blog highlighting thoughts and projects of an Atlanta-based
+  data scientists with an interest in Bayesian statistics and
+  functional programming.
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/blog-md" # the subpath of your site, e.g. /blog
@@ -113,6 +113,7 @@ redcarpet:
 # permalink:    :year/:month/:day/:title/
 permalink:    pretty
 paginate:     4
+paginate_path: "/blog/page:num/"
 sass:
   compressed: true
 
